// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LookupFieldOptions Lookup field options 1`] = `
<MockLookupProvider>
  <LookupFieldOptions
    index={1}
    label="Lookup Field Options"
    lookupContainer="/StudyVerifyProject/My Study"
    lookupQueryValue="Data"
    lookupSchema="exp"
    onChange={[MockFunction]}
    original={
      Immutable.Record {
        "conceptURI": undefined,
        "defaultScale": undefined,
        "description": undefined,
        "excludeFromShifting": false,
        "format": undefined,
        "hidden": false,
        "importAliases": undefined,
        "label": undefined,
        "lookupContainer": undefined,
        "lookupQuery": undefined,
        "lookupSchema": undefined,
        "name": "key",
        "primaryKey": undefined,
        "propertyId": 1,
        "propertyURI": "test",
        "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
        "required": false,
        "scale": undefined,
        "URL": undefined,
        "shownInInsertView": true,
        "shownInUpdateView": true,
        "dataType": Immutable.Record {
          "conceptURI": undefined,
          "display": "Integer",
          "name": "int",
          "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
          "shortDisplay": undefined,
        },
        "lookupQueryValue": undefined,
        "lookupType": Immutable.Record {
          "conceptURI": undefined,
          "display": "Lookup",
          "name": "lookup",
          "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
          "shortDisplay": undefined,
        },
        "original": Object {
          "dataType": Immutable.Record {
            "conceptURI": undefined,
            "display": "Integer",
            "name": "int",
            "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
            "shortDisplay": undefined,
          },
          "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
        },
        "updatedField": false,
      }
    }
  >
    <div>
      <Row
        bsClass="row"
        className="domain-row-expanded"
        componentClass="div"
      >
        <div
          className="domain-row-expanded row"
        >
          <Col
            bsClass="col"
            componentClass="div"
            xs={12}
          >
            <div
              className="col-xs-12"
            >
              <div
                className="domain-field-section-heading"
              >
                Lookup Field Options
              </div>
            </div>
          </Col>
        </div>
      </Row>
      <Row
        bsClass="row"
        className="domain-row-expanded"
        componentClass="div"
      >
        <div
          className="domain-row-expanded row"
        >
          <Col
            bsClass="col"
            componentClass="div"
            xs={2}
          >
            <div
              className="col-xs-2"
            >
              <div
                className="domain-field-label"
              >
                From Folder
              </div>
              <FolderSelect
                id="domainpropertiesrow-lookupContainer-1"
                key="domainpropertiesrow-lookupContainer-1"
                onChange={[Function]}
                value="/StudyVerifyProject/My Study"
              >
                <FolderSelectImpl
                  context={
                    Object {
                      "activeContainer": Immutable.Record {
                        "activeModules": Immutable.List [],
                        "folderType": "",
                        "hasRestrictedActiveModule": false,
                        "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                        "isContainerTab": false,
                        "isWorkbook": false,
                        "name": "My Study",
                        "parentId": "",
                        "parentPath": "",
                        "path": "/StudyVerifyProject/My Study",
                        "sortOrder": 0,
                        "title": "",
                        "type": "",
                      },
                      "fetchContainers": [Function],
                      "fetchQueries": [Function],
                      "fetchSchemas": [Function],
                    }
                  }
                  id="domainpropertiesrow-lookupContainer-1"
                  name="domainpropertiesrow-lookupContainer"
                  onChange={[Function]}
                  value="/StudyVerifyProject/My Study"
                >
                  <FormControl
                    bsClass="form-control"
                    componentClass="select"
                    context={
                      Object {
                        "activeContainer": Immutable.Record {
                          "activeModules": Immutable.List [],
                          "folderType": "",
                          "hasRestrictedActiveModule": false,
                          "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                          "isContainerTab": false,
                          "isWorkbook": false,
                          "name": "My Study",
                          "parentId": "",
                          "parentPath": "",
                          "path": "/StudyVerifyProject/My Study",
                          "sortOrder": 0,
                          "title": "",
                          "type": "",
                        },
                        "fetchContainers": [Function],
                        "fetchQueries": [Function],
                        "fetchSchemas": [Function],
                      }
                    }
                    id="domainpropertiesrow-lookupContainer-1"
                    name="domainpropertiesrow-lookupContainer"
                    onChange={[Function]}
                    value="/StudyVerifyProject/My Study"
                  >
                    <select
                      className="form-control"
                      context={
                        Object {
                          "activeContainer": Immutable.Record {
                            "activeModules": Immutable.List [],
                            "folderType": "",
                            "hasRestrictedActiveModule": false,
                            "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                            "isContainerTab": false,
                            "isWorkbook": false,
                            "name": "My Study",
                            "parentId": "",
                            "parentPath": "",
                            "path": "/StudyVerifyProject/My Study",
                            "sortOrder": 0,
                            "title": "",
                            "type": "",
                          },
                          "fetchContainers": [Function],
                          "fetchQueries": [Function],
                          "fetchSchemas": [Function],
                        }
                      }
                      id="domainpropertiesrow-lookupContainer-1"
                      name="domainpropertiesrow-lookupContainer"
                      onChange={[Function]}
                      value="/StudyVerifyProject/My Study"
                    >
                      <option
                        key="_current"
                        value="/StudyVerifyProject/My Study"
                      >
                        Current Folder
                      </option>
                    </select>
                  </FormControl>
                </FolderSelectImpl>
              </FolderSelect>
            </div>
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            xs={2}
          >
            <div
              className="col-xs-2"
            >
              <div
                className="domain-field-label"
              >
                From Schema
              </div>
              <SchemaSelect
                containerPath="/StudyVerifyProject/My Study"
                id="domainpropertiesrow-lookupSchema-1"
                key="domainpropertiesrow-lookupSchema-1"
                onChange={[Function]}
                value="exp"
              >
                <SchemaSelectImpl
                  containerPath="/StudyVerifyProject/My Study"
                  context={
                    Object {
                      "activeContainer": Immutable.Record {
                        "activeModules": Immutable.List [],
                        "folderType": "",
                        "hasRestrictedActiveModule": false,
                        "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                        "isContainerTab": false,
                        "isWorkbook": false,
                        "name": "My Study",
                        "parentId": "",
                        "parentPath": "",
                        "path": "/StudyVerifyProject/My Study",
                        "sortOrder": 0,
                        "title": "",
                        "type": "",
                      },
                      "fetchContainers": [Function],
                      "fetchQueries": [Function],
                      "fetchSchemas": [Function],
                    }
                  }
                  id="domainpropertiesrow-lookupSchema-1"
                  name="domainpropertiesrow-lookupSchema"
                  onChange={[Function]}
                  value="exp"
                >
                  <FormControl
                    bsClass="form-control"
                    componentClass="select"
                    id="domainpropertiesrow-lookupSchema-1"
                    name="domainpropertiesrow-lookupSchema"
                    onChange={[Function]}
                    placeholder="Select Schema"
                    value="exp"
                  >
                    <select
                      className="form-control"
                      id="domainpropertiesrow-lookupSchema-1"
                      name="domainpropertiesrow-lookupSchema"
                      onChange={[Function]}
                      placeholder="Select Schema"
                      value="exp"
                    >
                      <option
                        disabled={true}
                        key="_empty"
                      >
                        (No schemas)
                      </option>
                    </select>
                  </FormControl>
                </SchemaSelectImpl>
              </SchemaSelect>
            </div>
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            xs={2}
          >
            <div
              className="col-xs-2"
            >
              <div
                className="domain-field-label"
              >
                Target Table
              </div>
              <QuerySelect
                containerPath="/StudyVerifyProject/My Study"
                id="domainpropertiesrow-lookupQueryValue-1"
                key="domainpropertiesrow-lookupQueryValue-1"
                lookupURI="http://www.w3.org/2001/XMLSchema#int"
                onChange={[Function]}
                schemaName="exp"
                value="Data"
              >
                <QuerySelectImpl
                  containerPath="/StudyVerifyProject/My Study"
                  context={
                    Object {
                      "activeContainer": Immutable.Record {
                        "activeModules": Immutable.List [],
                        "folderType": "",
                        "hasRestrictedActiveModule": false,
                        "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                        "isContainerTab": false,
                        "isWorkbook": false,
                        "name": "My Study",
                        "parentId": "",
                        "parentPath": "",
                        "path": "/StudyVerifyProject/My Study",
                        "sortOrder": 0,
                        "title": "",
                        "type": "",
                      },
                      "fetchContainers": [Function],
                      "fetchQueries": [Function],
                      "fetchSchemas": [Function],
                    }
                  }
                  id="domainpropertiesrow-lookupQueryValue-1"
                  lookupURI="http://www.w3.org/2001/XMLSchema#int"
                  name="domainpropertiesrow-lookupQueryValue"
                  onChange={[Function]}
                  schemaName="exp"
                  value="Data"
                >
                  <FormControl
                    bsClass="form-control"
                    componentClass="select"
                    disabled={true}
                    id="domainpropertiesrow-lookupQueryValue-1"
                    name="domainpropertiesrow-lookupQueryValue"
                    onChange={[Function]}
                    value="Data"
                  >
                    <select
                      className="form-control"
                      disabled={true}
                      id="domainpropertiesrow-lookupQueryValue-1"
                      name="domainpropertiesrow-lookupQueryValue"
                      onChange={[Function]}
                      value="Data"
                    >
                      <option
                        disabled={true}
                        key="_loading"
                        value="Data"
                      >
                        Loading...
                      </option>
                      <option
                        disabled={true}
                        key="_empty"
                      >
                        (No tables)
                      </option>
                    </select>
                  </FormControl>
                </QuerySelectImpl>
              </QuerySelect>
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </LookupFieldOptions>
</MockLookupProvider>
`;

exports[`LookupFieldOptions Selected container changes queries 1`] = `
<MockLookupProvider>
  <LookupFieldOptions
    index={1}
    label="Lookup Field Options"
    lookupContainer="/StudyVerifyProject"
    lookupQueryValue=""
    lookupSchema=""
    onChange={[MockFunction]}
    original={
      Immutable.Record {
        "conceptURI": undefined,
        "defaultScale": undefined,
        "description": undefined,
        "excludeFromShifting": false,
        "format": undefined,
        "hidden": false,
        "importAliases": undefined,
        "label": undefined,
        "lookupContainer": undefined,
        "lookupQuery": undefined,
        "lookupSchema": undefined,
        "name": "key",
        "primaryKey": undefined,
        "propertyId": 1,
        "propertyURI": "test",
        "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
        "required": false,
        "scale": undefined,
        "URL": undefined,
        "shownInInsertView": true,
        "shownInUpdateView": true,
        "dataType": Immutable.Record {
          "conceptURI": undefined,
          "display": "Integer",
          "name": "int",
          "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
          "shortDisplay": undefined,
        },
        "lookupQueryValue": undefined,
        "lookupType": Immutable.Record {
          "conceptURI": undefined,
          "display": "Lookup",
          "name": "lookup",
          "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
          "shortDisplay": undefined,
        },
        "original": Object {
          "dataType": Immutable.Record {
            "conceptURI": undefined,
            "display": "Integer",
            "name": "int",
            "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
            "shortDisplay": undefined,
          },
          "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
        },
        "updatedField": false,
      }
    }
  >
    <div>
      <Row
        bsClass="row"
        className="domain-row-expanded"
        componentClass="div"
      >
        <div
          className="domain-row-expanded row"
        >
          <Col
            bsClass="col"
            componentClass="div"
            xs={12}
          >
            <div
              className="col-xs-12"
            >
              <div
                className="domain-field-section-heading"
              >
                Lookup Field Options
              </div>
            </div>
          </Col>
        </div>
      </Row>
      <Row
        bsClass="row"
        className="domain-row-expanded"
        componentClass="div"
      >
        <div
          className="domain-row-expanded row"
        >
          <Col
            bsClass="col"
            componentClass="div"
            xs={2}
          >
            <div
              className="col-xs-2"
            >
              <div
                className="domain-field-label"
              >
                From Folder
              </div>
              <FolderSelect
                id="domainpropertiesrow-lookupContainer-1"
                key="domainpropertiesrow-lookupContainer-1"
                onChange={[Function]}
                value="/StudyVerifyProject"
              >
                <FolderSelectImpl
                  context={
                    Object {
                      "activeContainer": Immutable.Record {
                        "activeModules": Immutable.List [],
                        "folderType": "",
                        "hasRestrictedActiveModule": false,
                        "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                        "isContainerTab": false,
                        "isWorkbook": false,
                        "name": "My Study",
                        "parentId": "",
                        "parentPath": "",
                        "path": "/StudyVerifyProject/My Study",
                        "sortOrder": 0,
                        "title": "",
                        "type": "",
                      },
                      "fetchContainers": [Function],
                      "fetchQueries": [Function],
                      "fetchSchemas": [Function],
                    }
                  }
                  id="domainpropertiesrow-lookupContainer-1"
                  name="domainpropertiesrow-lookupContainer"
                  onChange={[Function]}
                  value="/StudyVerifyProject"
                >
                  <FormControl
                    bsClass="form-control"
                    componentClass="select"
                    context={
                      Object {
                        "activeContainer": Immutable.Record {
                          "activeModules": Immutable.List [],
                          "folderType": "",
                          "hasRestrictedActiveModule": false,
                          "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                          "isContainerTab": false,
                          "isWorkbook": false,
                          "name": "My Study",
                          "parentId": "",
                          "parentPath": "",
                          "path": "/StudyVerifyProject/My Study",
                          "sortOrder": 0,
                          "title": "",
                          "type": "",
                        },
                        "fetchContainers": [Function],
                        "fetchQueries": [Function],
                        "fetchSchemas": [Function],
                      }
                    }
                    id="domainpropertiesrow-lookupContainer-1"
                    name="domainpropertiesrow-lookupContainer"
                    onChange={[Function]}
                    value="/StudyVerifyProject"
                  >
                    <select
                      className="form-control"
                      context={
                        Object {
                          "activeContainer": Immutable.Record {
                            "activeModules": Immutable.List [],
                            "folderType": "",
                            "hasRestrictedActiveModule": false,
                            "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                            "isContainerTab": false,
                            "isWorkbook": false,
                            "name": "My Study",
                            "parentId": "",
                            "parentPath": "",
                            "path": "/StudyVerifyProject/My Study",
                            "sortOrder": 0,
                            "title": "",
                            "type": "",
                          },
                          "fetchContainers": [Function],
                          "fetchQueries": [Function],
                          "fetchSchemas": [Function],
                        }
                      }
                      id="domainpropertiesrow-lookupContainer-1"
                      name="domainpropertiesrow-lookupContainer"
                      onChange={[Function]}
                      value="/StudyVerifyProject"
                    >
                      <option
                        key="_current"
                        value="/StudyVerifyProject/My Study"
                      >
                        Current Folder
                      </option>
                      <option
                        key="a21a06e1-4058-1037-95c6-1e81b2533cfd"
                        value="/StudyVerifyProject"
                      >
                        /StudyVerifyProject
                      </option>
                      <option
                        key="e0ea3e55-3420-1035-8057-68fea9bfb3a0"
                        value="/StudyVerifyProject/My Study"
                      >
                        /StudyVerifyProject/My Study
                      </option>
                    </select>
                  </FormControl>
                </FolderSelectImpl>
              </FolderSelect>
            </div>
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            xs={2}
          >
            <div
              className="col-xs-2"
            >
              <div
                className="domain-field-label"
              >
                From Schema
              </div>
              <SchemaSelect
                containerPath="/StudyVerifyProject"
                id="domainpropertiesrow-lookupSchema-1"
                key="domainpropertiesrow-lookupSchema-1"
                onChange={[Function]}
                value=""
              >
                <SchemaSelectImpl
                  containerPath="/StudyVerifyProject"
                  context={
                    Object {
                      "activeContainer": Immutable.Record {
                        "activeModules": Immutable.List [],
                        "folderType": "",
                        "hasRestrictedActiveModule": false,
                        "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                        "isContainerTab": false,
                        "isWorkbook": false,
                        "name": "My Study",
                        "parentId": "",
                        "parentPath": "",
                        "path": "/StudyVerifyProject/My Study",
                        "sortOrder": 0,
                        "title": "",
                        "type": "",
                      },
                      "fetchContainers": [Function],
                      "fetchQueries": [Function],
                      "fetchSchemas": [Function],
                    }
                  }
                  id="domainpropertiesrow-lookupSchema-1"
                  name="domainpropertiesrow-lookupSchema"
                  onChange={[Function]}
                  value=""
                >
                  <FormControl
                    bsClass="form-control"
                    componentClass="select"
                    id="domainpropertiesrow-lookupSchema-1"
                    name="domainpropertiesrow-lookupSchema"
                    onChange={[Function]}
                    placeholder="Select Schema"
                    value=""
                  >
                    <select
                      className="form-control"
                      id="domainpropertiesrow-lookupSchema-1"
                      name="domainpropertiesrow-lookupSchema"
                      onChange={[Function]}
                      placeholder="Select Schema"
                      value=""
                    >
                      <option
                        key="_default"
                      />
                      <option
                        key="exp"
                        value="exp"
                      >
                        exp
                      </option>
                      <option
                        key="exp.data"
                        value="exp.data"
                      >
                        exp.data
                      </option>
                      <option
                        key="exp.materials"
                        value="exp.materials"
                      >
                        exp.materials
                      </option>
                      <option
                        key="lists"
                        value="lists"
                      >
                        lists
                      </option>
                      <option
                        key="study"
                        value="study"
                      >
                        study
                      </option>
                    </select>
                  </FormControl>
                </SchemaSelectImpl>
              </SchemaSelect>
            </div>
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            xs={2}
          >
            <div
              className="col-xs-2"
            >
              <div
                className="domain-field-label"
              >
                Target Table
              </div>
              <QuerySelect
                containerPath="/StudyVerifyProject"
                id="domainpropertiesrow-lookupQueryValue-1"
                key="domainpropertiesrow-lookupQueryValue-1"
                lookupURI="http://www.w3.org/2001/XMLSchema#int"
                onChange={[Function]}
                schemaName=""
                value=""
              >
                <QuerySelectImpl
                  containerPath="/StudyVerifyProject"
                  context={
                    Object {
                      "activeContainer": Immutable.Record {
                        "activeModules": Immutable.List [],
                        "folderType": "",
                        "hasRestrictedActiveModule": false,
                        "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                        "isContainerTab": false,
                        "isWorkbook": false,
                        "name": "My Study",
                        "parentId": "",
                        "parentPath": "",
                        "path": "/StudyVerifyProject/My Study",
                        "sortOrder": 0,
                        "title": "",
                        "type": "",
                      },
                      "fetchContainers": [Function],
                      "fetchQueries": [Function],
                      "fetchSchemas": [Function],
                    }
                  }
                  id="domainpropertiesrow-lookupQueryValue-1"
                  lookupURI="http://www.w3.org/2001/XMLSchema#int"
                  name="domainpropertiesrow-lookupQueryValue"
                  onChange={[Function]}
                  schemaName=""
                  value=""
                >
                  <FormControl
                    bsClass="form-control"
                    componentClass="select"
                    disabled={false}
                    id="domainpropertiesrow-lookupQueryValue-1"
                    name="domainpropertiesrow-lookupQueryValue"
                    onChange={[Function]}
                    value=""
                  >
                    <select
                      className="form-control"
                      disabled={false}
                      id="domainpropertiesrow-lookupQueryValue-1"
                      name="domainpropertiesrow-lookupQueryValue"
                      onChange={[Function]}
                      value=""
                    >
                      <option
                        key="_default"
                      />
                      <option
                        key="http://www.w3.org/2001/XMLSchema#int|Data"
                        value="http://www.w3.org/2001/XMLSchema#int|Data"
                      >
                        Data
                         (
                        Integer
                        )
                      </option>
                      <option
                        key="http://www.w3.org/2001/XMLSchema#int|DataInputs"
                        value="http://www.w3.org/2001/XMLSchema#int|DataInputs"
                      >
                        DataInputs
                         (
                        Integer
                        )
                      </option>
                      <option
                        key="http://www.w3.org/2001/XMLSchema#int|Runs"
                        value="http://www.w3.org/2001/XMLSchema#int|Runs"
                      >
                        Runs
                         (
                        Integer
                        )
                      </option>
                    </select>
                  </FormControl>
                </QuerySelectImpl>
              </QuerySelect>
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </LookupFieldOptions>
</MockLookupProvider>
`;

exports[`LookupFieldOptions Selected container changes schemas 1`] = `
<MockLookupProvider>
  <LookupFieldOptions
    index={1}
    label="Lookup Field Options"
    lookupContainer="/StudyVerifyProject"
    lookupQueryValue=""
    lookupSchema=""
    onChange={[MockFunction]}
    original={
      Immutable.Record {
        "conceptURI": undefined,
        "defaultScale": undefined,
        "description": undefined,
        "excludeFromShifting": false,
        "format": undefined,
        "hidden": false,
        "importAliases": undefined,
        "label": undefined,
        "lookupContainer": undefined,
        "lookupQuery": undefined,
        "lookupSchema": undefined,
        "name": "key",
        "primaryKey": undefined,
        "propertyId": 1,
        "propertyURI": "test",
        "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
        "required": false,
        "scale": undefined,
        "URL": undefined,
        "shownInInsertView": true,
        "shownInUpdateView": true,
        "dataType": Immutable.Record {
          "conceptURI": undefined,
          "display": "Integer",
          "name": "int",
          "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
          "shortDisplay": undefined,
        },
        "lookupQueryValue": undefined,
        "lookupType": Immutable.Record {
          "conceptURI": undefined,
          "display": "Lookup",
          "name": "lookup",
          "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
          "shortDisplay": undefined,
        },
        "original": Object {
          "dataType": Immutable.Record {
            "conceptURI": undefined,
            "display": "Integer",
            "name": "int",
            "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
            "shortDisplay": undefined,
          },
          "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
        },
        "updatedField": false,
      }
    }
  >
    <div>
      <Row
        bsClass="row"
        className="domain-row-expanded"
        componentClass="div"
      >
        <div
          className="domain-row-expanded row"
        >
          <Col
            bsClass="col"
            componentClass="div"
            xs={12}
          >
            <div
              className="col-xs-12"
            >
              <div
                className="domain-field-section-heading"
              >
                Lookup Field Options
              </div>
            </div>
          </Col>
        </div>
      </Row>
      <Row
        bsClass="row"
        className="domain-row-expanded"
        componentClass="div"
      >
        <div
          className="domain-row-expanded row"
        >
          <Col
            bsClass="col"
            componentClass="div"
            xs={2}
          >
            <div
              className="col-xs-2"
            >
              <div
                className="domain-field-label"
              >
                From Folder
              </div>
              <FolderSelect
                id="domainpropertiesrow-lookupContainer-1"
                key="domainpropertiesrow-lookupContainer-1"
                onChange={[Function]}
                value="/StudyVerifyProject"
              >
                <FolderSelectImpl
                  context={
                    Object {
                      "activeContainer": Immutable.Record {
                        "activeModules": Immutable.List [],
                        "folderType": "",
                        "hasRestrictedActiveModule": false,
                        "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                        "isContainerTab": false,
                        "isWorkbook": false,
                        "name": "My Study",
                        "parentId": "",
                        "parentPath": "",
                        "path": "/StudyVerifyProject/My Study",
                        "sortOrder": 0,
                        "title": "",
                        "type": "",
                      },
                      "fetchContainers": [Function],
                      "fetchQueries": [Function],
                      "fetchSchemas": [Function],
                    }
                  }
                  id="domainpropertiesrow-lookupContainer-1"
                  name="domainpropertiesrow-lookupContainer"
                  onChange={[Function]}
                  value="/StudyVerifyProject"
                >
                  <FormControl
                    bsClass="form-control"
                    componentClass="select"
                    context={
                      Object {
                        "activeContainer": Immutable.Record {
                          "activeModules": Immutable.List [],
                          "folderType": "",
                          "hasRestrictedActiveModule": false,
                          "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                          "isContainerTab": false,
                          "isWorkbook": false,
                          "name": "My Study",
                          "parentId": "",
                          "parentPath": "",
                          "path": "/StudyVerifyProject/My Study",
                          "sortOrder": 0,
                          "title": "",
                          "type": "",
                        },
                        "fetchContainers": [Function],
                        "fetchQueries": [Function],
                        "fetchSchemas": [Function],
                      }
                    }
                    id="domainpropertiesrow-lookupContainer-1"
                    name="domainpropertiesrow-lookupContainer"
                    onChange={[Function]}
                    value="/StudyVerifyProject"
                  >
                    <select
                      className="form-control"
                      context={
                        Object {
                          "activeContainer": Immutable.Record {
                            "activeModules": Immutable.List [],
                            "folderType": "",
                            "hasRestrictedActiveModule": false,
                            "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                            "isContainerTab": false,
                            "isWorkbook": false,
                            "name": "My Study",
                            "parentId": "",
                            "parentPath": "",
                            "path": "/StudyVerifyProject/My Study",
                            "sortOrder": 0,
                            "title": "",
                            "type": "",
                          },
                          "fetchContainers": [Function],
                          "fetchQueries": [Function],
                          "fetchSchemas": [Function],
                        }
                      }
                      id="domainpropertiesrow-lookupContainer-1"
                      name="domainpropertiesrow-lookupContainer"
                      onChange={[Function]}
                      value="/StudyVerifyProject"
                    >
                      <option
                        key="_current"
                        value="/StudyVerifyProject/My Study"
                      >
                        Current Folder
                      </option>
                      <option
                        key="a21a06e1-4058-1037-95c6-1e81b2533cfd"
                        value="/StudyVerifyProject"
                      >
                        /StudyVerifyProject
                      </option>
                      <option
                        key="e0ea3e55-3420-1035-8057-68fea9bfb3a0"
                        value="/StudyVerifyProject/My Study"
                      >
                        /StudyVerifyProject/My Study
                      </option>
                    </select>
                  </FormControl>
                </FolderSelectImpl>
              </FolderSelect>
            </div>
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            xs={2}
          >
            <div
              className="col-xs-2"
            >
              <div
                className="domain-field-label"
              >
                From Schema
              </div>
              <SchemaSelect
                containerPath="/StudyVerifyProject"
                id="domainpropertiesrow-lookupSchema-1"
                key="domainpropertiesrow-lookupSchema-1"
                onChange={[Function]}
                value=""
              >
                <SchemaSelectImpl
                  containerPath="/StudyVerifyProject"
                  context={
                    Object {
                      "activeContainer": Immutable.Record {
                        "activeModules": Immutable.List [],
                        "folderType": "",
                        "hasRestrictedActiveModule": false,
                        "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                        "isContainerTab": false,
                        "isWorkbook": false,
                        "name": "My Study",
                        "parentId": "",
                        "parentPath": "",
                        "path": "/StudyVerifyProject/My Study",
                        "sortOrder": 0,
                        "title": "",
                        "type": "",
                      },
                      "fetchContainers": [Function],
                      "fetchQueries": [Function],
                      "fetchSchemas": [Function],
                    }
                  }
                  id="domainpropertiesrow-lookupSchema-1"
                  name="domainpropertiesrow-lookupSchema"
                  onChange={[Function]}
                  value=""
                >
                  <FormControl
                    bsClass="form-control"
                    componentClass="select"
                    id="domainpropertiesrow-lookupSchema-1"
                    name="domainpropertiesrow-lookupSchema"
                    onChange={[Function]}
                    placeholder="Select Schema"
                    value=""
                  >
                    <select
                      className="form-control"
                      id="domainpropertiesrow-lookupSchema-1"
                      name="domainpropertiesrow-lookupSchema"
                      onChange={[Function]}
                      placeholder="Select Schema"
                      value=""
                    >
                      <option
                        key="_default"
                      />
                      <option
                        key="exp"
                        value="exp"
                      >
                        exp
                      </option>
                      <option
                        key="exp.data"
                        value="exp.data"
                      >
                        exp.data
                      </option>
                      <option
                        key="exp.materials"
                        value="exp.materials"
                      >
                        exp.materials
                      </option>
                      <option
                        key="lists"
                        value="lists"
                      >
                        lists
                      </option>
                      <option
                        key="study"
                        value="study"
                      >
                        study
                      </option>
                    </select>
                  </FormControl>
                </SchemaSelectImpl>
              </SchemaSelect>
            </div>
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            xs={2}
          >
            <div
              className="col-xs-2"
            >
              <div
                className="domain-field-label"
              >
                Target Table
              </div>
              <QuerySelect
                containerPath="/StudyVerifyProject"
                id="domainpropertiesrow-lookupQueryValue-1"
                key="domainpropertiesrow-lookupQueryValue-1"
                lookupURI="http://www.w3.org/2001/XMLSchema#int"
                onChange={[Function]}
                schemaName=""
                value=""
              >
                <QuerySelectImpl
                  containerPath="/StudyVerifyProject"
                  context={
                    Object {
                      "activeContainer": Immutable.Record {
                        "activeModules": Immutable.List [],
                        "folderType": "",
                        "hasRestrictedActiveModule": false,
                        "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                        "isContainerTab": false,
                        "isWorkbook": false,
                        "name": "My Study",
                        "parentId": "",
                        "parentPath": "",
                        "path": "/StudyVerifyProject/My Study",
                        "sortOrder": 0,
                        "title": "",
                        "type": "",
                      },
                      "fetchContainers": [Function],
                      "fetchQueries": [Function],
                      "fetchSchemas": [Function],
                    }
                  }
                  id="domainpropertiesrow-lookupQueryValue-1"
                  lookupURI="http://www.w3.org/2001/XMLSchema#int"
                  name="domainpropertiesrow-lookupQueryValue"
                  onChange={[Function]}
                  schemaName=""
                  value=""
                >
                  <FormControl
                    bsClass="form-control"
                    componentClass="select"
                    disabled={false}
                    id="domainpropertiesrow-lookupQueryValue-1"
                    name="domainpropertiesrow-lookupQueryValue"
                    onChange={[Function]}
                    value=""
                  >
                    <select
                      className="form-control"
                      disabled={false}
                      id="domainpropertiesrow-lookupQueryValue-1"
                      name="domainpropertiesrow-lookupQueryValue"
                      onChange={[Function]}
                      value=""
                    >
                      <option
                        key="_default"
                      />
                      <option
                        key="http://www.w3.org/2001/XMLSchema#int|Data"
                        value="http://www.w3.org/2001/XMLSchema#int|Data"
                      >
                        Data
                         (
                        Integer
                        )
                      </option>
                      <option
                        key="http://www.w3.org/2001/XMLSchema#int|DataInputs"
                        value="http://www.w3.org/2001/XMLSchema#int|DataInputs"
                      >
                        DataInputs
                         (
                        Integer
                        )
                      </option>
                      <option
                        key="http://www.w3.org/2001/XMLSchema#int|Runs"
                        value="http://www.w3.org/2001/XMLSchema#int|Runs"
                      >
                        Runs
                         (
                        Integer
                        )
                      </option>
                    </select>
                  </FormControl>
                </QuerySelectImpl>
              </QuerySelect>
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </LookupFieldOptions>
</MockLookupProvider>
`;

exports[`LookupFieldOptions Selected schema changes queries 1`] = `
<MockLookupProvider>
  <LookupFieldOptions
    index={1}
    label="Lookup Field Options"
    lookupContainer="/StudyVerifyProject/My Study"
    lookupQueryValue=""
    lookupSchema="study"
    onChange={[MockFunction]}
    original={
      Immutable.Record {
        "conceptURI": undefined,
        "defaultScale": undefined,
        "description": undefined,
        "excludeFromShifting": false,
        "format": undefined,
        "hidden": false,
        "importAliases": undefined,
        "label": undefined,
        "lookupContainer": undefined,
        "lookupQuery": undefined,
        "lookupSchema": undefined,
        "name": "key",
        "primaryKey": undefined,
        "propertyId": 1,
        "propertyURI": "test",
        "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
        "required": false,
        "scale": undefined,
        "URL": undefined,
        "shownInInsertView": true,
        "shownInUpdateView": true,
        "dataType": Immutable.Record {
          "conceptURI": undefined,
          "display": "Integer",
          "name": "int",
          "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
          "shortDisplay": undefined,
        },
        "lookupQueryValue": undefined,
        "lookupType": Immutable.Record {
          "conceptURI": undefined,
          "display": "Lookup",
          "name": "lookup",
          "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
          "shortDisplay": undefined,
        },
        "original": Object {
          "dataType": Immutable.Record {
            "conceptURI": undefined,
            "display": "Integer",
            "name": "int",
            "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
            "shortDisplay": undefined,
          },
          "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
        },
        "updatedField": false,
      }
    }
  >
    <div>
      <Row
        bsClass="row"
        className="domain-row-expanded"
        componentClass="div"
      >
        <div
          className="domain-row-expanded row"
        >
          <Col
            bsClass="col"
            componentClass="div"
            xs={12}
          >
            <div
              className="col-xs-12"
            >
              <div
                className="domain-field-section-heading"
              >
                Lookup Field Options
              </div>
            </div>
          </Col>
        </div>
      </Row>
      <Row
        bsClass="row"
        className="domain-row-expanded"
        componentClass="div"
      >
        <div
          className="domain-row-expanded row"
        >
          <Col
            bsClass="col"
            componentClass="div"
            xs={2}
          >
            <div
              className="col-xs-2"
            >
              <div
                className="domain-field-label"
              >
                From Folder
              </div>
              <FolderSelect
                id="domainpropertiesrow-lookupContainer-1"
                key="domainpropertiesrow-lookupContainer-1"
                onChange={[Function]}
                value="/StudyVerifyProject/My Study"
              >
                <FolderSelectImpl
                  context={
                    Object {
                      "activeContainer": Immutable.Record {
                        "activeModules": Immutable.List [],
                        "folderType": "",
                        "hasRestrictedActiveModule": false,
                        "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                        "isContainerTab": false,
                        "isWorkbook": false,
                        "name": "My Study",
                        "parentId": "",
                        "parentPath": "",
                        "path": "/StudyVerifyProject/My Study",
                        "sortOrder": 0,
                        "title": "",
                        "type": "",
                      },
                      "fetchContainers": [Function],
                      "fetchQueries": [Function],
                      "fetchSchemas": [Function],
                    }
                  }
                  id="domainpropertiesrow-lookupContainer-1"
                  name="domainpropertiesrow-lookupContainer"
                  onChange={[Function]}
                  value="/StudyVerifyProject/My Study"
                >
                  <FormControl
                    bsClass="form-control"
                    componentClass="select"
                    context={
                      Object {
                        "activeContainer": Immutable.Record {
                          "activeModules": Immutable.List [],
                          "folderType": "",
                          "hasRestrictedActiveModule": false,
                          "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                          "isContainerTab": false,
                          "isWorkbook": false,
                          "name": "My Study",
                          "parentId": "",
                          "parentPath": "",
                          "path": "/StudyVerifyProject/My Study",
                          "sortOrder": 0,
                          "title": "",
                          "type": "",
                        },
                        "fetchContainers": [Function],
                        "fetchQueries": [Function],
                        "fetchSchemas": [Function],
                      }
                    }
                    id="domainpropertiesrow-lookupContainer-1"
                    name="domainpropertiesrow-lookupContainer"
                    onChange={[Function]}
                    value="/StudyVerifyProject/My Study"
                  >
                    <select
                      className="form-control"
                      context={
                        Object {
                          "activeContainer": Immutable.Record {
                            "activeModules": Immutable.List [],
                            "folderType": "",
                            "hasRestrictedActiveModule": false,
                            "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                            "isContainerTab": false,
                            "isWorkbook": false,
                            "name": "My Study",
                            "parentId": "",
                            "parentPath": "",
                            "path": "/StudyVerifyProject/My Study",
                            "sortOrder": 0,
                            "title": "",
                            "type": "",
                          },
                          "fetchContainers": [Function],
                          "fetchQueries": [Function],
                          "fetchSchemas": [Function],
                        }
                      }
                      id="domainpropertiesrow-lookupContainer-1"
                      name="domainpropertiesrow-lookupContainer"
                      onChange={[Function]}
                      value="/StudyVerifyProject/My Study"
                    >
                      <option
                        key="_current"
                        value="/StudyVerifyProject/My Study"
                      >
                        Current Folder
                      </option>
                      <option
                        key="a21a06e1-4058-1037-95c6-1e81b2533cfd"
                        value="/StudyVerifyProject"
                      >
                        /StudyVerifyProject
                      </option>
                      <option
                        key="e0ea3e55-3420-1035-8057-68fea9bfb3a0"
                        value="/StudyVerifyProject/My Study"
                      >
                        /StudyVerifyProject/My Study
                      </option>
                    </select>
                  </FormControl>
                </FolderSelectImpl>
              </FolderSelect>
            </div>
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            xs={2}
          >
            <div
              className="col-xs-2"
            >
              <div
                className="domain-field-label"
              >
                From Schema
              </div>
              <SchemaSelect
                containerPath="/StudyVerifyProject/My Study"
                id="domainpropertiesrow-lookupSchema-1"
                key="domainpropertiesrow-lookupSchema-1"
                onChange={[Function]}
                value="study"
              >
                <SchemaSelectImpl
                  containerPath="/StudyVerifyProject/My Study"
                  context={
                    Object {
                      "activeContainer": Immutable.Record {
                        "activeModules": Immutable.List [],
                        "folderType": "",
                        "hasRestrictedActiveModule": false,
                        "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                        "isContainerTab": false,
                        "isWorkbook": false,
                        "name": "My Study",
                        "parentId": "",
                        "parentPath": "",
                        "path": "/StudyVerifyProject/My Study",
                        "sortOrder": 0,
                        "title": "",
                        "type": "",
                      },
                      "fetchContainers": [Function],
                      "fetchQueries": [Function],
                      "fetchSchemas": [Function],
                    }
                  }
                  id="domainpropertiesrow-lookupSchema-1"
                  name="domainpropertiesrow-lookupSchema"
                  onChange={[Function]}
                  value="study"
                >
                  <FormControl
                    bsClass="form-control"
                    componentClass="select"
                    id="domainpropertiesrow-lookupSchema-1"
                    name="domainpropertiesrow-lookupSchema"
                    onChange={[Function]}
                    placeholder="Select Schema"
                    value="study"
                  >
                    <select
                      className="form-control"
                      id="domainpropertiesrow-lookupSchema-1"
                      name="domainpropertiesrow-lookupSchema"
                      onChange={[Function]}
                      placeholder="Select Schema"
                      value="study"
                    >
                      <option
                        key="exp"
                        value="exp"
                      >
                        exp
                      </option>
                      <option
                        key="exp.data"
                        value="exp.data"
                      >
                        exp.data
                      </option>
                      <option
                        key="exp.materials"
                        value="exp.materials"
                      >
                        exp.materials
                      </option>
                      <option
                        key="lists"
                        value="lists"
                      >
                        lists
                      </option>
                      <option
                        key="study"
                        value="study"
                      >
                        study
                      </option>
                    </select>
                  </FormControl>
                </SchemaSelectImpl>
              </SchemaSelect>
            </div>
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            xs={2}
          >
            <div
              className="col-xs-2"
            >
              <div
                className="domain-field-label"
              >
                Target Table
              </div>
              <QuerySelect
                containerPath="/StudyVerifyProject/My Study"
                id="domainpropertiesrow-lookupQueryValue-1"
                key="domainpropertiesrow-lookupQueryValue-1"
                lookupURI="http://www.w3.org/2001/XMLSchema#int"
                onChange={[Function]}
                schemaName="study"
                value=""
              >
                <QuerySelectImpl
                  containerPath="/StudyVerifyProject/My Study"
                  context={
                    Object {
                      "activeContainer": Immutable.Record {
                        "activeModules": Immutable.List [],
                        "folderType": "",
                        "hasRestrictedActiveModule": false,
                        "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                        "isContainerTab": false,
                        "isWorkbook": false,
                        "name": "My Study",
                        "parentId": "",
                        "parentPath": "",
                        "path": "/StudyVerifyProject/My Study",
                        "sortOrder": 0,
                        "title": "",
                        "type": "",
                      },
                      "fetchContainers": [Function],
                      "fetchQueries": [Function],
                      "fetchSchemas": [Function],
                    }
                  }
                  id="domainpropertiesrow-lookupQueryValue-1"
                  lookupURI="http://www.w3.org/2001/XMLSchema#int"
                  name="domainpropertiesrow-lookupQueryValue"
                  onChange={[Function]}
                  schemaName="study"
                  value=""
                >
                  <FormControl
                    bsClass="form-control"
                    componentClass="select"
                    disabled={false}
                    id="domainpropertiesrow-lookupQueryValue-1"
                    name="domainpropertiesrow-lookupQueryValue"
                    onChange={[Function]}
                    value=""
                  >
                    <select
                      className="form-control"
                      disabled={false}
                      id="domainpropertiesrow-lookupQueryValue-1"
                      name="domainpropertiesrow-lookupQueryValue"
                      onChange={[Function]}
                      value=""
                    >
                      <option
                        key="_default"
                      />
                      <option
                        key="http://www.w3.org/2001/XMLSchema#int|Data"
                        value="http://www.w3.org/2001/XMLSchema#int|Data"
                      >
                        Data
                         (
                        Integer
                        )
                      </option>
                      <option
                        key="http://www.w3.org/2001/XMLSchema#int|DataInputs"
                        value="http://www.w3.org/2001/XMLSchema#int|DataInputs"
                      >
                        DataInputs
                         (
                        Integer
                        )
                      </option>
                      <option
                        key="http://www.w3.org/2001/XMLSchema#int|Runs"
                        value="http://www.w3.org/2001/XMLSchema#int|Runs"
                      >
                        Runs
                         (
                        Integer
                        )
                      </option>
                    </select>
                  </FormControl>
                </QuerySelectImpl>
              </QuerySelect>
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </LookupFieldOptions>
</MockLookupProvider>
`;
